Fix letter spacing

--- a/src/components/timetable/timetable.css
+++ b/src/components/timetable/timetable.css
@@ -61,7 +61,7 @@
     min-width: 52px;
     padding: 4px 0;
     font-size: 12px;
-    letter-spacing: -0.5px;
+    letter-spacing: -.025em;
     line-height: 8px;
 }
 
